--- a/krakatoa/bin/.gitignore
+++ b/krakatoa/bin/.gitignore
@@ -1,2 +1,70 @@
-/comp/
+/.classpath
+/.project
+/ER-SEM26.kra2
+/ER-SEM30.kra2
+/ER-SEM33.KRA.kra2
+/ER-SEM33.kra2
+/ER-SEM34.kra2
+/ER-SEM40.KRA.kra2
+/ER-SEM44.kra2
+/ER-SEM45.kra2
+/ER-SEM46.kra2
+/ER-SEM47.kra2
+/ER-SEM50.kra2
+/ER-SEM51.kra2
+/ER-SEM59.kra2
+/ER-SEM60.kra2
+/ER-SEM62.kra2
+/ER-SIN05.KRA.kra2
+/ER-SIN05.kra2
+/ER-SIN19.kra2
+/ER-SIN22.kra2
+/OK-CHK01.kra2
+/OK-CHK03.kra2
+/OK-CHK04.kra2
+/OK-CHK07.kra2
+/OK-GER01.kra2
+/OK-GER02.kra2
+/OK-GER03.kra2
+/OK-GER04.kra2
+/OK-GER05.kra2
+/OK-GER06.kra2
+/OK-GER07.kra2
+/OK-GER08.kra2
+/OK-GER09.kra2
+/OK-GER11.kra2
+/OK-GER12.kra2
+/OK-GER13.kra2
+/OK-GER14.kra2
+/OK-GER15.kra2
+/OK-GER16.kra2
+/OK-GER21.kra2
+/OK-LEX02.kra2
+/OK-LEX03.kra2
+/OK-LEX04.kra2
+/OK-LEX05.kra2
+/OK-LEX06.kra2
+/OK-LEX07.kra2
+/OK-LEX08.kra2
+/OK-LEX10.kra2
+/OK-SEM03.kra2
+/OK-SEM04.kra2
+/OK-SEM07.kra2
+/OK-SEM11.kra2
+/OK-SEM13.kra2
+/OK-SEM15.kra2
+/OK-SIN02.kra2
+/OK-SIN03.kra2
+/OK-SIN04.kra2
+/OK-SIN05.kra2
+/OK-SIN07.kra2
+/OK-SIN08.kra2
+/OK-SIN09.kra2
+/OK-SIN10.kra2
+/OK-SIN11.kra2
+/OK-SIN12.kra2
+/OK-SIN13.kra2
 /ast/
+/comp/
+/lexer/
+/report.txt
