--- a/krakatoa/bin/.gitignore
+++ b/krakatoa/bin/.gitignore
@@ -12,6 +12,8 @@
 /ER-SEM47.kra2
 /ER-SEM50.kra2
 /ER-SEM51.kra2
+/ER-SEM57.KRA.kra2
+/ER-SEM58.kra2
 /ER-SEM59.kra2
 /ER-SEM60.kra2
 /ER-SEM62.kra2
