--- a/krakatoa/bin/.gitignore
+++ b/krakatoa/bin/.gitignore
@@ -1,29 +1,43 @@
 /.classpath
 /.project
 /ER-SEM26.kra2
+/ER-SEM30.KRA.kra2
 /ER-SEM30.kra2
+/ER-SEM32.kra2
 /ER-SEM33.KRA.kra2
 /ER-SEM33.kra2
 /ER-SEM34.kra2
+/ER-SEM36.kra2
+/ER-SEM37.kra2
 /ER-SEM40.KRA.kra2
+/ER-SEM40.kra2
 /ER-SEM44.kra2
 /ER-SEM45.kra2
 /ER-SEM46.kra2
 /ER-SEM47.kra2
 /ER-SEM50.kra2
+/ER-SEM51.KRA.kra2
 /ER-SEM51.kra2
 /ER-SEM57.KRA.kra2
 /ER-SEM58.kra2
+/ER-SEM59.KRA.kra2
 /ER-SEM59.kra2
 /ER-SEM60.kra2
+/ER-SEM61.kra2
+/ER-SEM62.KRA.kra2
 /ER-SEM62.kra2
+/ER-SEM68.kra2
+/ER-SEM70.kra2
 /ER-SIN05.KRA.kra2
 /ER-SIN05.kra2
 /ER-SIN19.kra2
 /ER-SIN22.kra2
 /OK-CHK01.kra2
+/OK-CHK02.kra2
 /OK-CHK03.kra2
 /OK-CHK04.kra2
+/OK-CHK05.kra2
+/OK-CHK06.kra2
 /OK-CHK07.kra2
 /OK-GER01.kra2
 /OK-GER02.kra2
@@ -34,6 +48,7 @@
 /OK-GER07.kra2
 /OK-GER08.kra2
 /OK-GER09.kra2
+/OK-GER10.kra2
 /OK-GER11.kra2
 /OK-GER12.kra2
 /OK-GER13.kra2
@@ -51,14 +66,20 @@
 /OK-LEX10.kra2
 /OK-SEM03.kra2
 /OK-SEM04.kra2
+/OK-SEM05.kra2
+/OK-SEM06.kra2
 /OK-SEM07.kra2
+/OK-SEM08.kra2
+/OK-SEM10.kra2
 /OK-SEM11.kra2
+/OK-SEM12.kra2
 /OK-SEM13.kra2
 /OK-SEM15.kra2
 /OK-SIN02.kra2
 /OK-SIN03.kra2
 /OK-SIN04.kra2
 /OK-SIN05.kra2
+/OK-SIN06.kra2
 /OK-SIN07.kra2
 /OK-SIN08.kra2
 /OK-SIN09.kra2
@@ -66,7 +87,6 @@
 /OK-SIN11.kra2
 /OK-SIN12.kra2
 /OK-SIN13.kra2
+/OK-SIN14.kra2
 /ast/
 /comp/
-/lexer/
-/report.txt
