--- a/krakatoa/bin/.gitignore
+++ b/krakatoa/bin/.gitignore
@@ -92,3 +92,9 @@
 /comp/
 /OK-GER21.KRA.kra2
 /OK-SIN07.KRA.kra2
+/ER-SEM04.kra2
+/ER-SEM05.kra2
+/ER-SEM38.kra2
+/ER-SEM41.kra2
+/ER-SEM42.kra2
+/OK-SEM09.kra2
